--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>TeWay Studio</title>
-	<meta name="description" content="TeWay Studio is a hyper casual game studio that produces quality games.">
+	<title>Revolave Studio</title>
+	<meta name="description" content="Revolave Studio is a hyper casual game studio that produces quality games.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
@@ -175,7 +175,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<!-- about text -->
-								<p>TeWay Studio is a hyper casual game studio that produces quality games. We make games that we enjoy playing.</p>
+								<p>Revolave Studio is a hyper casual game studio that produces quality games. We make games that we enjoy playing.</p>
 								<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 							</div>
 						</div>
@@ -533,7 +533,7 @@
     
     <footer class="footer light">
         <div class="container">
-            <span class="copyright">© Teway Studio</span>
+            <span class="copyright">© Revolave Studio</span>
         </div>
     </footer>
 	
