--- a/privacy.html
+++ b/privacy.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>TeWay Studio | Privacy</title>
-	<meta name="description" content="TeWay Studio privacy policy">
+	<title>Revolave Studio | Privacy</title>
+	<meta name="description" content="Revolave Studio Privacy Policy">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
@@ -69,7 +69,7 @@
             <a class="navbar-brand" href="index-3-light.html"><img src="fonts/logo-dark.svg" alt="Bolby"></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto scrollspy">
-                    <li class="nav-item"><a class="nav-link" href="https://www.tewaystudio.ga">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.revolave.ga">Home</a></li>
                 </ul>
             </div>
         </nav>
@@ -92,7 +92,7 @@
 			<div class="mt-5">
 				<p><h2 class="section-title wow fadeInUp">Privacy Policy</h2></p></br>
 				<p>
-					TeWay Studio built this app as a Free app. This SERVICE is provided by TeWay
+					Revolave Studio built this app as a Free app. This SERVICE is provided by Revolave
 					Studio at no cost and is intended for use as is. This page is used to inform
 					visitors regarding our policies with the collection, use, and disclosure of
 					Personal Information if anyone decided to use our Service. If you choose to
@@ -219,7 +219,7 @@
 				</br><p><h2 class="section-title wow fadeInUp">Contact Us</h2></p></br>
 				<p>
 					If you have any questions or suggestions about our Privacy Policy, do not
-					hesitate to contact us at <strong>tewaystudio@gmail.com</strong>
+					hesitate to contact us at <strong>revolave.studio@gmail.com</strong>
 				</p>
 			</div>
 
@@ -232,7 +232,7 @@
     
     <footer class="footer light">
         <div class="container">
-            <span class="copyright">© Teway Studio</span>
+            <span class="copyright">© Revolave Studio</span>
         </div>
     </footer>
 	
