--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<div class="col-md-3">
 					<div class="text-center text-md-left">
 						<!-- avatar image -->
-						<img src="fonts/avatar-2.svg" alt="Bolby">
+						<img src="fonts/logo-dark.svg" alt="Bolby" style="width:200px;height:100px;">>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 				</div>
