--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 				<!-- buttons -->
 				<div class="mt-4">
-					<a href="#contact" class="btn btn-default">Contact</a>
+					<a href="https://play.google.com/store/apps/dev?id=7603877924688081724" class="btn btn-default">Games</a>
 				</div>
 			</div>
 			
@@ -187,57 +187,6 @@
 
 			<div class="spacer" data-height="70"></div>
 			
-			<div class="row">
-				
-				<div class="col-md-3 col-sm-6">
-					<!-- fact item -->
-					<div class="fact-item">
-						<span class="icon icon-fire"></span>
-						<div class="details">
-							<h3 class="mb-0 mt-0 number"><em class="count">13</em></h3>
-							<p class="mb-0">Projects completed</p>
-						</div>
-					</div>
-					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-				</div>
-
-				<div class="col-md-3 col-sm-6">
-					<!-- fact item -->
-					<div class="fact-item">
-						<span class="icon icon-cup"></span>
-						<div class="details">
-							<h3 class="mb-0 mt-0 number"><em class="count">177</em></h3>
-							<p class="mb-0">Cup of coffee</p>
-						</div>
-					</div>
-					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-				</div>
-
-				<div class="col-md-3 col-sm-6">
-					<!-- fact item -->
-					<div class="fact-item">
-						<span class="icon icon-people"></span>
-						<div class="details">
-							<h3 class="mb-0 mt-0 number"><em class="count">1442</em></h3>
-							<p class="mb-0">Downloads</p>
-						</div>
-					</div>
-					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-				</div>
-
-				<div class="col-md-3 col-sm-6">
-					<!-- fact item -->
-					<div class="fact-item">
-						<span class="icon icon-game-controller"></span>
-						<div class="details">
-							<h3 class="mb-0 mt-0 number"><em class="count">100</em></h3>
-							<p class="mb-0">Enjoy</p>
-						</div>
-					</div>
-				</div>
-
-			</div>
-
 		</div>
 		
 	</section>
