--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div class="intro">
 				<!-- info -->
 				<h1 class="mb-2 mt-0">We are</h1>
-				<span><span class="text-rotating">Gamer, Developer, Artist</span></span>
+				<span><span class="text-rotating">Gamers, Developers, Artists</span></span>
 
 				<!-- social icons -->
 				<!--<ul class="social-icons light list-inline mb-0 mt-4">
@@ -106,7 +106,7 @@
 
 				<!-- buttons -->
 				<div class="mt-4">
-					<a href="https://play.google.com/store/apps/dev?id=7603877924688081724" class="btn btn-default">Games</a>
+					<a href="https://play.google.com/store/apps/dev?id=7603877924688081724" class="btn btn-default" target="_blank">Games</a>
 				</div>
 			</div>
 			
