--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Revolave Studio</title>
-	<meta name="description" content="Revolave Studio is a hyper casual game studio that produces quality games.">
+	<meta name="description" content="Experience the world of dreams!">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
@@ -106,7 +106,7 @@
 
 				<!-- buttons -->
 				<div class="mt-4">
-					<a href="https://play.google.com/store/apps/dev?id=7603877924688081724" class="btn btn-default" target="_blank">Games</a>
+					<a href="https://play.google.com/store/apps/dev?id=7603877924688081724" class="btn btn-default" target="_blank">OUR GAMES</a>
 				</div>
 			</div>
 			
