--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
 	<section id="about">
 
 		<div class="container">
-			
-			<!-- section title -->
+
 			<h2 class="section-title wow fadeInUp">About</h2>
 
 			<div class="spacer" data-height="60"></div>
@@ -163,32 +162,27 @@
 			<div class="row">
 
 				<div class="col-md-3">
-					<div class="text-center text-md-left">
-						<!-- avatar image -->
-						<img src="fonts/logo-dark.svg" alt="Bolby" style="width:200px;height:100px;">>
+					<div class="text-center text-md-left">						
+						<h1 class="mb-2 mt-0">Who Are We?</h1>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 				</div>
 
 				<div class="col-md-9 triangle-left-md triangle-top-sm">
 					<div class="rounded bg-white shadow-dark padding-30">
-						<div class="row">
 							<div class="col-md-12">
-								<!-- about text -->
 								<p>Revolave Studio is a hyper casual game studio that produces quality games. We make games that we enjoy playing.</p>
 								<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 							</div>
-						</div>
 					</div>
 				</div>
 
 			</div>
-			<!-- row end -->
 
-			<div class="spacer" data-height="70"></div>
-			
-		</div>
-		
+			<div class="spacer" data-height="50"></div>		
+
+		</div>	
+
 	</section>
 	
 	<!-- section how we do -->
@@ -231,7 +225,6 @@
 						<p class="mb-0">We present our finished games for your entertainment.</p>
 					</div>
 				</div>
-
 			</div>
 		</div>
 		
