--- a/privacy.html
+++ b/privacy.html
@@ -112,7 +112,7 @@
 					information that we request will be retained by us and used as described in
 					this privacy policy. The app does use third party services that may collect
 					information used to identify you. Link to privacy policy of third party
-					service providers used by the app
+					service providers used by the app:
 				</p>
 				<ul>
 					<li>
@@ -228,7 +228,7 @@
 	</section>
 	
 	
-    <div class="spacer" data-height="96"></div>
+    <div class="spacer" data-height="150"></div>
     
     <footer class="footer light">
         <div class="container">
