--- a/privacy.html
+++ b/privacy.html
@@ -92,8 +92,8 @@
 			<div class="mt-5">
 				<p><h2 class="section-title wow fadeInUp">Privacy Policy</h2></p></br>
 				<p>
-					Revolave Studio built this app as a Free app. This SERVICE is provided by Revolave
-					Studio at no cost and is intended for use as is. This page is used to inform
+					Revolave Studios built this app as a Free app. This SERVICE is provided by Revolave
+					Studios at no cost and is intended for use as is. This page is used to inform
 					visitors regarding our policies with the collection, use, and disclosure of
 					Personal Information if anyone decided to use our Service. If you choose to
 					use our Service, then you agree to the collection and use of information in
@@ -224,15 +224,17 @@
 			</div>
 
 		</div>
+
+		<div class="spacer" data-height="50"></div>
 		
 	</section>
 	
 	
-    <div class="spacer" data-height="150"></div>
+    <div class="spacer" data-height="100"></div>
     
     <footer class="footer light">
         <div class="container">
-            <span class="copyright">© Revolave Studio</span>
+            <span class="copyright">© Revolave Studios</span>
         </div>
     </footer>
 	
