--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Revolave Studio</title>
+	<title>Revolave Studios</title>
 	<meta name="description" content="Experience the world of dreams!">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
@@ -163,7 +163,7 @@
 
 				<div class="col-md-8">
 					<div class="text-center text-md-left">						
-						<h3 class="mb-4 mt-0">Who Are We?</h3>
+						<h3 class="mb-2 mt-0">Who Are We?</h3>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 				</div>
@@ -171,7 +171,7 @@
 				<div class="col-md-9 triangle-left-md triangle-top-sm">
 					<div class="rounded bg-white shadow-dark padding-30">
 							<div class="col-md-12">
-								<p>Revolave Studio is a hyper casual game studio that produces quality games. We make games that we enjoy playing.</p>
+								<p>Revolave Studios is a hyper casual game studio that produces quality games. We make games that we enjoy playing.</p>
 								<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 							</div>
 					</div>
@@ -475,7 +475,7 @@
     
     <footer class="footer light">
         <div class="container">
-            <span class="copyright">© Revolave Studio</span>
+            <span class="copyright">© Revolave Studios</span>
         </div>
     </footer>
 	
