--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     <li class="nav-item"><a href="#howwedo" class="nav-link">How We Do?</a></li>
                     <li class="nav-item"><a href="#works" class="nav-link">Works</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="privacy.html" class="nav-link">Privacy</a></li>
                 </ul>
             </div>
         </nav>
