Updated privacy page

--- a/privacy.html
+++ b/privacy.html
@@ -156,10 +156,7 @@
 					device. If you choose to refuse our cookies, you may not be able to use
 					some portions of this Service.
 				</p>
-				<p>
-					Service Providers
-				</p>
-				</br><p><h2 class="section-title wow fadeInUp">Cookies</h2></p></br>
+				</br><p><h2 class="section-title wow fadeInUp">Service Providers</h2></p></br>
 				<p>
 					We may employ third-party companies and individuals due to the following
 					reasons:
