--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
 				<div class="col-md-8">
 					<!-- Contact Form -->
-					<form id="contact-form" class="contact-form mt-6" action="https://formspree.io/f/myyvkzdo" method="POST">
+					<form id="contact-form" class="contact-form mt-6" action="https://formspree.io/f/xoqbjdpz" method="POST">
 						
 						<div class="messages"></div>
 						
