--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<meta name="description" content="Experience the world of dreams!">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
-
+	
+	<meta name="facebook-domain-verification" content="ln512or32u6ewuwc7sz9h41lt9xs7q" />
+	
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
 	<link rel="stylesheet" href="css/all.min.css" type="text/css" media="all">
