--- a/privacy.html
+++ b/privacy.html
@@ -116,19 +116,28 @@
 				</p>
 				<ul>
 					<li>
-						Facebook
+						<a href="https://www.google.com/policies/privacy/">Google Play Services</a>						
 					</li>
 					<li>
-						Unity
+						<a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a>						
 					</li>
 					<li>
-						GameAnalytics
+						<a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a>						
 					</li>
 					<li>
-						Adjust
+						<a href="https://www.facebook.com/about/privacy">Facebook</a>						
 					</li>
 					<li>
-						AppLovin
+						<a href="https://unity3d.com/legal/privacy-policy">Unity</a>						
+					</li>
+					<li>
+						<a href="https://gameanalytics.com/terms/">GameAnalytics</a>						
+					</li>
+					<li>
+						<a href="https://www.adjust.com/terms/privacy-policy/">Adjust</a>						
+					</li>
+					<li>
+						<a href="https://www.applovin.com/privacy/">AppLovin</a>						
 					</li>
 					<li>
 						Other tools
