--- a/privacy.html
+++ b/privacy.html
@@ -116,28 +116,28 @@
 				</p>
 				<ul>
 					<li>
-						<a href="https://www.google.com/policies/privacy/">Google Play Services</a>						
+						<a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a>						
 					</li>
 					<li>
-						<a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a>						
+						<a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a>						
 					</li>
 					<li>
-						<a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a>						
+						<a href="https://firebase.google.com/policies/analytics" target="_blank">Firebase Analytics</a>						
 					</li>
 					<li>
-						<a href="https://www.facebook.com/about/privacy">Facebook</a>						
+						<a href="https://www.facebook.com/about/privacy" target="_blank">Facebook</a>						
 					</li>
 					<li>
-						<a href="https://unity3d.com/legal/privacy-policy">Unity</a>						
+						<a href="https://unity3d.com/legal/privacy-policy" target="_blank">Unity</a>						
 					</li>
 					<li>
-						<a href="https://gameanalytics.com/terms/">GameAnalytics</a>						
+						<a href="https://gameanalytics.com/terms/" target="_blank">GameAnalytics</a>						
 					</li>
 					<li>
-						<a href="https://www.adjust.com/terms/privacy-policy/">Adjust</a>						
+						<a href="https://www.adjust.com/terms/privacy-policy/" target="_blank">Adjust</a>						
 					</li>
 					<li>
-						<a href="https://www.applovin.com/privacy/">AppLovin</a>						
+						<a href="https://www.applovin.com/privacy/" target="_blank">AppLovin</a>						
 					</li>
 					<li>
 						Other tools
