--- a/privacy.html
+++ b/privacy.html
@@ -65,7 +65,7 @@
 
     <div class="container">
 	
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="https://www.revolave.ga"><img src="fonts/logo-dark.svg" alt="Revolave" style="width:100px;height:50px;"></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto scrollspy">
@@ -225,7 +225,7 @@
 				</br><p><h2 class="section-title wow fadeInUp">Contact Us</h2></p></br>
 				<p>
 					If you have any questions or suggestions about our Privacy Policy, do not
-					hesitate to contact us at <strong>revolave.studio@gmail.com</strong>
+					hesitate to contact us at <strong><a href="mailto:revolave.studio@gmail.com">revolave.studio@gmail.com</a></strong>
 				</p>
 			</div>
 
