Updated index and privacy.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <a class="navbar-brand" href="#home"><img src="fonts/logo-dark.svg" alt="Bolby" style="width:208px;height:50px;"></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto scrollspy">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                    <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#howwedo" class="nav-link">How We Do?</a></li>
                     <li class="nav-item"><a href="#works" class="nav-link">Works</a></li>
@@ -89,7 +89,7 @@
 <main class="content-3">
 	
 	<!-- section home -->
-	<section id="home" class="home light d-flex align-items-center">
+	<section id="home" class="home dark d-flex align-items-center">
 		<div class="container">
 
 			<!-- intro -->
@@ -114,7 +114,7 @@
 			</div>
 			
 			<!-- scroll down mouse wheel -->
-			<div class="scroll-down light">
+			<div class="scroll-down dark">
 				<a href="#about" class="mouse-wrapper">
 					<span>Scroll Down</span>
 					<span class="mouse">
@@ -158,7 +158,7 @@
 
 		<div class="container">
 
-			<h2 class="section-title wow fadeInUp">About</h2>
+			<h2 class="section-title wow fadeInUp" style="color:black">About</h2>
 
 			<div class="spacer" data-height="60"></div>
 			
@@ -166,13 +166,13 @@
 
 				<div class="col-md-8">
 					<div class="text-center text-md-left">						
-						<h3 class="mb-2 mt-0">Who Are We?</h3>
+						<h3 class="mb-2 mt-0" style="color:black">Who Are We?</h3>
 					</div>
 					<div class="spacer d-md-none d-lg-none" data-height="30"></div>
 				</div>
 
 				<div class="col-md-9 triangle-left-md triangle-top-sm">
-					<div class="rounded bg-white shadow-dark padding-30">
+					<div class="rounded bg-white shadow-light padding-30">
 							<div class="col-md-12">
 								<p>Revolave Studios is a hyper casual game studio that produces quality games. We make games that we enjoy playing.</p>
 								<div class="spacer d-md-none d-lg-none" data-height="30"></div>
@@ -194,7 +194,7 @@
 		<div class="container">
 			
 			<!-- section title -->
-			<h2 class="section-title wow fadeInUp">How We Do?</h2>
+			<h2 class="section-title wow fadeInUp" style="color:black">How We Do It?</h2>
 
 			<div class="spacer" data-height="60"></div>
 			
@@ -203,7 +203,7 @@
 				<div class="col-md-4">
 					<!-- service box -->
 					<div class="service-box rounded data-background padding-30 text-center text-light shadow-blue" data-color="#6C6CE5">
-						<img src="fonts/service-1.svg" alt="UI/UX design">
+						<img src="fonts/service-1.svg" alt="Idea">
 						<h3 class="mb-3 mt-0">Idea</h3>
 						<p class="mb-0">We produce game ideas in our dream world.</p>
 					</div>
@@ -213,7 +213,7 @@
 				<div class="col-md-4">
 					<!-- service box -->
 					<div class="service-box rounded data-background padding-30 text-center shadow-yellow" data-color="#F9D74C">
-						<img src="fonts/service-2.svg" alt="UI/UX design">
+						<img src="fonts/service-2.svg" alt="Development & Art">
 						<h3 class="mb-3 mt-0">Development & Art</h3>
 						<p class="mb-0">We develop to turn our ideas into games.</p>
 					</div>
@@ -223,7 +223,7 @@
 				<div class="col-md-4">
 					<!-- service box -->
 					<div class="service-box rounded data-background padding-30 text-center text-light shadow-pink" data-color="#F97B8B">
-						<img src="fonts/service-3.svg" alt="UI/UX design">
+						<img src="fonts/service-3.svg" alt="Publish">
 						<h3 class="mb-3 mt-0">Publish</h3>
 						<p class="mb-0">We present our finished games for your entertainment.</p>
 					</div>
@@ -239,7 +239,7 @@
 		<div class="container">
 			
 			<!-- section title -->
-			<h2 class="section-title wow fadeInUp">Recent works</h2>
+			<h2 class="section-title wow fadeInUp" style="color:black">Recent works</h2>
 
 			<div class="spacer" data-height="60"></div>
 
@@ -353,63 +353,13 @@
 
 	</section>
 	
-	<!-- section testimonials -->
-	<section id="testimonials">
-
-		<div class="container">
-			
-			<!-- section title -->
-			<h2 class="section-title wow fadeInUp">Clients</h2>
-
-			<div class="spacer" data-height="60"></div>
-			
-			<div class="row">
-				<div class="col-md-3 col-6">
-					<!-- client item -->
-					<div class="client-item">
-						<div class="inner">
-							<img src="fonts/client-1.svg" alt="client-name">
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3 col-6">
-					<!-- client item -->
-					<div class="client-item">
-						<div class="inner">
-							<img src="fonts/client-2.svg" alt="client-name">
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3 col-6">
-					<!-- client item -->
-					<div class="client-item">
-						<div class="inner">
-							<img src="fonts/client-3.svg" alt="client-name">
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3 col-6">
-					<!-- client item -->
-					<div class="client-item">
-						<div class="inner">
-							<img src="fonts/client-4.svg" alt="client-name">
-						</div>
-					</div>
-				</div>
-				</div>
-			</div>
-
-		</div>
-
-	</section>
-	
 	<!-- section contact -->
 	<section id="contact">
 
 		<div class="container">
 			
 			<!-- section title -->
-			<h2 class="section-title wow fadeInUp">Get In Touch</h2>
+			<h2 class="section-title wow fadeInUp" style="color:black">Get In Touch</h2>
 
 			<div class="spacer" data-height="60"></div>
 			
@@ -418,7 +368,7 @@
 				<div class="col-md-4">
 					<!-- contact info -->
 					<div class="contact-info">
-						<h3 class="wow fadeInUp">Let's talk about everything!</h3>
+						<h3 class="wow fadeInUp" style="color:black">Let's talk about everything!</h3>
 					</div>
 				</div>
 
@@ -474,9 +424,9 @@
 
 	</section>
 
-    <div class="spacer" data-height="96"></div>
-    
-    <footer class="footer light">
+	<div class="spacer" data-height="60"></div>
+			
+    <footer class="footer dark">
         <div class="container">
             <span class="copyright">© Revolave Studios</span>
         </div>
