Updated preload theme

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
 <!-- Preloader -->
-<div id="preloader" class="light">
+<div id="preloader" class="dark">
 	<div class="outer">
 		<!-- Google Chrome -->
 		<div class="infinityChrome">
@@ -67,7 +67,7 @@
 
     <div class="container">
 	
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#home"><img src="fonts/logo-dark.svg" alt="Revolave" style="width:167px;height:40px;"></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto scrollspy">
@@ -152,7 +152,7 @@
 		</div>
 		
 	</section>
-
+	
 	<!-- section about -->
 	<section id="about">
 
@@ -268,12 +268,13 @@
 				
 				<!-- portfolio item -->
 				<div class="col-md-4 col-sm-6 grid-item creative design">
-					<a href="#small-dialog0" class="work-content">
+					<a href="https://play.google.com/store/apps/details?id=com.revolave.medievalhero" target="_blank">
+					<!--<a href="#small-dialog0" class="work-content">-->
 						<div class="portfolio-item rounded shadow-dark">
 							<div class="details">
 								<span class="term">Game</span>
 								<h4 class="title">Medieval Hero</h4>
-								<span class="more-button"><i class="icon-options"></i></span>
+								<!--<span class="more-button"><i class="icon-options"></i></span>-->
 							</div>
 							<div class="thumb">
 								<img src="images/medievalhero.jpeg" alt="Portfolio-title" style="width:500px;height:350px;">
@@ -292,12 +293,13 @@
 
 				<!-- portfolio item -->
 				<div class="col-md-4 col-sm-6 grid-item creative design">
-					<a href="#small-dialog1" class="work-content">
+					<a href="https://play.google.com/store/apps/details?id=com.revolave.rotator2048" target="_blank">
+					<!--<a href="#small-dialog1" class="work-content">-->
 						<div class="portfolio-item rounded shadow-dark">
 							<div class="details">
 								<span class="term">Game</span>
 								<h4 class="title">Rotator 2048</h4>
-								<span class="more-button"><i class="icon-options"></i></span>
+								<!--<span class="more-button"><i class="icon-options"></i></span>-->
 							</div>
 							<div class="thumb">
 								<img src="images/rotator.jpeg" alt="Portfolio-title" style="width:500px;height:350px;">
@@ -316,12 +318,13 @@
 
 				<!-- portfolio item -->
 				<div class="col-md-4 col-sm-6 grid-item creative design">
-					<a href="#small-dialog2" class="work-content">
+					<a href="https://play.google.com/store/apps/details?id=com.revolave.rainonem" target="_blank">
+					<!--<a href="#small-dialog2" class="work-content">-->
 						<div class="portfolio-item rounded shadow-dark">
 							<div class="details">
 								<span class="term">Game</span>
 								<h4 class="title">Rain On'Em</h4>
-								<span class="more-button"><i class="icon-options"></i></span>
+								<!--<span class="more-button"><i class="icon-options"></i></span>-->
 							</div>
 							<div class="thumb">
 								<img src="images/rainonem.jpeg" alt="Portfolio-title" style="width:500px;height:350px;">
