Updated home screen

--- a/index.html
+++ b/index.html
@@ -100,32 +100,26 @@
 				<!-- intro -->
 				<div class="intro">
 					<!-- info -->
-					<div class="video-container">
-						<iframe
-							src="https://www.youtube.com/embed/9knzgzp-pKs?playlist=9knzgzp-pKs&controls=0&autoplay=1&frameborder=0&disablekb=1&loop=1&mute=1&playsinline=1&showinfo=0">
-						</iframe>
-
-						<div class="icon-container">
-							<div class="icon-slider">
-								<a href="https://play.google.com/store/apps/details?id=com.revolave.rainonem"
-									class="icon-button" target="_blank">
-									<img src="images/rainonem.jpeg" alt="Icon 1"></a>
-								<a href="https://play.google.com/store/apps/details?id=com.revolave.medievalhero"
-									class="icon-button" target="_blank">
-									<img src="images/medievalhero.jpeg" alt="Icon 2"></a>
-								<a href="https://play.google.com/store/apps/details?id=com.revolave.rotator2048"
-									class="icon-button" target="_blank">
-									<img src="images/rotator.jpeg" alt="Icon 3"></a>
-								<!-- Add more icons as needed -->
-							</div>
+					
+					<div class="icon-container">
+						<div class="icon-slider">
+							<a href="https://play.google.com/store/apps/details?id=com.revolave.rainonem"
+								class="icon-button" target="_blank">
+								<img src="images/rainonem.jpeg" alt="Icon 1"></a>
+							<a href="https://play.google.com/store/apps/details?id=com.revolave.medievalhero"
+								class="icon-button" target="_blank">
+								<img src="images/medievalhero.jpeg" alt="Icon 2"></a>
+							<a href="https://play.google.com/store/apps/details?id=com.revolave.rotator2048"
+								class="icon-button" target="_blank">
+								<img src="images/rotator.jpeg" alt="Icon 3"></a>
+							<!-- Add more icons as needed -->
 						</div>
 					</div>
 
-					<!-- 
 					<h1 class="mb-2 mt-0">We are</h1>
-					<span><span class="text-rotating">Gamers, Developers, Artists</span></span> -->
+					<span><span class="text-rotating">Gamers, Developers, Artists</span></span>
 					<div class="mt-4">
-						<a href="https://play.google.com/store/apps/dev?id=7603877924688081724" class="overlay-button"
+						<a href="https://play.google.com/store/apps/dev?id=7603877924688081724" class="btn btn-default"
 							target="_blank">OUR GAMES</a>
 					</div>
 
