--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
 					<div class="col-md-4">
 						<!-- service box -->
-						<div class="service-box rounded data-background padding-30 text-center text-light shadow-blue"
+						<div class="service-box rounded data-background padding-30 text-center shadow-blue"
 							data-color="#6C6CE5">
 							<img src="fonts/service-1.svg" alt="Idea">
 							<h3 class="mb-3 mt-0">Idea</h3>
@@ -293,7 +293,7 @@
 
 					<div class="col-md-4">
 						<!-- service box -->
-						<div class="service-box rounded data-background padding-30 text-center text-light shadow-pink"
+						<div class="service-box rounded data-background padding-30 text-center shadow-pink"
 							data-color="#F97B8B">
 							<img src="fonts/service-3.svg" alt="Publish">
 							<h3 class="mb-3 mt-0">Publish</h3>
@@ -317,7 +317,9 @@
 
 				<!-- portfolio filter (desktop) -->
 				<ul class="portfolio-filter list-inline wow fadeInUp">
-					<li class="current list-inline-item" data-filter="*">All Games</li>
+					<a href="https://play.google.com/store/apps/details?id=com.revolave.medievalhero" target="_blank">
+						<li class="current list-inline-item" data-filter="*">All Games</li>
+					</a>
 					<!--<li class="list-inline-item" data-filter=".creative">Creative</li>
 				<li class="list-inline-item" data-filter=".art">Art</li>
 				<li class="list-inline-item" data-filter=".design">Design</li>
