--- a/index.html
+++ b/index.html
@@ -78,9 +78,6 @@
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<ul class="navbar-nav ml-auto scrollspy">
 						<li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
-						<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-						<li class="nav-item"><a href="#howwedo" class="nav-link">How We Do?</a></li>
-						<li class="nav-item"><a href="#works" class="nav-link">Works</a></li>
 						<li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
 						<li class="nav-item"><a href="privacy.html" class="nav-link">Privacy</a></li>
 					</ul>
@@ -117,32 +114,16 @@
 						</div>
 					</div>
 
-					<h1 class="mb-2 mt-0">We are</h1>
-					<span><span class="text-rotating">Gamers, Developers, Artists</span></span>
 					<div class="mt-4">
 						<a href="https://play.google.com/store/apps/dev?id=7603877924688081724" class="btn btn-default"
-							target="_blank">OUR GAMES</a>
+							target="_blank">ALL GAMES</a>
 					</div>
 
 					<!-- social icons -->
-					<!--<ul class="social-icons light list-inline mb-0 mt-4">
-					<li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-behance"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-dribbble"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-				</ul>-->
+					<ul class="social-icons light list-inline mb-0 mt-4">
+						<li class="list-inline-item"><a href="https://www.linkedin.com/in/tolgacebeci/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+					</ul>
 					<!-- buttons -->
-				</div>
-
-				<!-- scroll down mouse wheel -->
-				<div class="scroll-down dark">
-					<a href="#about" class="mouse-wrapper">
-						<span>Scroll Down</span>
-						<span class="mouse">
-							<span class="wheel"></span>
-						</span>
-					</a>
 				</div>
 
 				<!-- parallax layers -->
@@ -221,227 +202,6 @@
 
 		</section>
 
-		<!-- section about -->
-		<section id="about">
-
-			<div class="container">
-
-				<h2 class="section-title wow fadeInUp" style="color:black">About</h2>
-
-				<div class="spacer" data-height="60"></div>
-
-				<div class="row">
-
-					<div class="col-md-8">
-						<div class="text-center text-md-left">
-							<h3 class="mb-2 mt-0" style="color:black">Who Are We?</h3>
-						</div>
-						<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-					</div>
-
-					<div class="col-md-9 triangle-left-md triangle-top-sm">
-						<div class="rounded bg-white shadow-light padding-30">
-							<div class="col-md-12">
-								<p>Revolave Studios is a hyper casual game studio that produces quality games. We make
-									games that we enjoy playing.</p>
-								<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="spacer" data-height="50"></div>
-
-			</div>
-
-		</section>
-
-		<!-- section how we do -->
-		<section id="howwedo">
-
-			<div class="container">
-
-				<!-- section title -->
-				<h2 class="section-title wow fadeInUp" style="color:black">How We Do It?</h2>
-
-				<div class="spacer" data-height="60"></div>
-
-				<div class="row">
-
-					<div class="col-md-4">
-						<!-- service box -->
-						<div class="service-box rounded data-background padding-30 text-center shadow-blue"
-							data-color="#6C6CE5">
-							<img src="fonts/service-1.svg" alt="Idea">
-							<h3 class="mb-3 mt-0">Idea</h3>
-							<p class="mb-0">We produce game ideas in our dream world.</p>
-						</div>
-						<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-					</div>
-
-					<div class="col-md-4">
-						<!-- service box -->
-						<div class="service-box rounded data-background padding-30 text-center shadow-yellow"
-							data-color="#F9D74C">
-							<img src="fonts/service-2.svg" alt="Development & Art">
-							<h3 class="mb-3 mt-0">Development & Art</h3>
-							<p class="mb-0">We develop to turn our ideas into games.</p>
-						</div>
-						<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-					</div>
-
-					<div class="col-md-4">
-						<!-- service box -->
-						<div class="service-box rounded data-background padding-30 text-center shadow-pink"
-							data-color="#F97B8B">
-							<img src="fonts/service-3.svg" alt="Publish">
-							<h3 class="mb-3 mt-0">Publish</h3>
-							<p class="mb-0">We present our finished games for your entertainment.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</section>
-
-		<!-- section works -->
-		<section id="works">
-
-			<div class="container">
-
-				<!-- section title -->
-				<h2 class="section-title wow fadeInUp" style="color:black">Recent works</h2>
-
-				<div class="spacer" data-height="60"></div>
-
-				<!-- portfolio filter (desktop) -->
-				<ul class="portfolio-filter list-inline wow fadeInUp">
-					<a href="https://play.google.com/store/apps/details?id=com.revolave.medievalhero" target="_blank">
-						<li class="current list-inline-item" data-filter="*">All Games</li>
-					</a>
-					<!--<li class="list-inline-item" data-filter=".creative">Creative</li>
-				<li class="list-inline-item" data-filter=".art">Art</li>
-				<li class="list-inline-item" data-filter=".design">Design</li>
-				<li class="list-inline-item" data-filter=".branding">Branding</li>-->
-				</ul>
-
-				<!-- portfolio filter (mobile) -->
-				<div class="pf-filter-wrapper">
-					<select class="portfolio-filter-mobile">
-						<option value="*">All Games</option>
-						<!--<option value=".creative">Creative</option>
-					<option value=".art">Art</option>
-					<option value=".design">Design</option>
-					<option value=".branding">Branding</option>-->
-					</select>
-				</div>
-
-				<!-- portolio wrapper -->
-				<div class="row portfolio-wrapper">
-
-					<!-- portfolio item -->
-					<div class="col-md-4 col-sm-6 grid-item creative design">
-						<a href="https://play.google.com/store/apps/details?id=com.revolave.medievalhero"
-							target="_blank">
-							<!--<a href="#small-dialog0" class="work-content">-->
-							<div class="portfolio-item rounded shadow-dark">
-								<div class="details">
-									<span class="term">Game</span>
-									<h4 class="title">Medieval Hero</h4>
-									<!--<span class="more-button"><i class="icon-options"></i></span>-->
-								</div>
-								<div class="thumb">
-									<img src="images/medievalhero.jpeg" alt="Portfolio-title"
-										style="width:500px;height:350px;">
-									<div class="mask"></div>
-								</div>
-							</div>
-						</a>
-						<div id="small-dialog0" class="white-popup zoom-anim-dialog mfp-hide">
-							<img src="images/medievalhero.jpeg" alt="Title">
-							<h2>Medieval Hero</h2>
-							<p>Take your bow and arrows and deal with your enemies. Take down all of your opponents and
-								save the town with it's innocent people!</p>
-							<a href="https://play.google.com/store/apps/details?id=com.revolave.medievalhero"
-								target="_blank" class="btn btn-default">View on Google Play</a>
-							<!--<a href="#" class="btn btn-default">View on App Store</a>-->
-						</div>
-					</div>
-
-					<!-- portfolio item -->
-					<div class="col-md-4 col-sm-6 grid-item creative design">
-						<a href="https://play.google.com/store/apps/details?id=com.revolave.rotator2048"
-							target="_blank">
-							<!--<a href="#small-dialog1" class="work-content">-->
-							<div class="portfolio-item rounded shadow-dark">
-								<div class="details">
-									<span class="term">Game</span>
-									<h4 class="title">Rotator 2048</h4>
-									<!--<span class="more-button"><i class="icon-options"></i></span>-->
-								</div>
-								<div class="thumb">
-									<img src="images/rotator.jpeg" alt="Portfolio-title"
-										style="width:500px;height:350px;">
-									<div class="mask"></div>
-								</div>
-							</div>
-						</a>
-						<div id="small-dialog1" class="white-popup zoom-anim-dialog mfp-hide">
-							<img src="images/rotator.jpeg" alt="Title">
-							<h2>Rotator 2048</h2>
-							<p>There is an exit on the other side. Will my cube face upward when it slide. There is also
-								a number on that exit. Does my cube's match with it</p>
-							<a href="https://play.google.com/store/apps/details?id=com.revolave.rotator2048"
-								target="_blank" class="btn btn-default">View on Google Play</a>
-							<!--<a href="#" class="btn btn-default">View on App Store</a>-->
-						</div>
-					</div>
-
-					<!-- portfolio item -->
-					<div class="col-md-4 col-sm-6 grid-item creative design">
-						<a href="https://play.google.com/store/apps/details?id=com.revolave.rainonem" target="_blank">
-							<!--<a href="#small-dialog2" class="work-content">-->
-							<div class="portfolio-item rounded shadow-dark">
-								<div class="details">
-									<span class="term">Game</span>
-									<h4 class="title">Rain On'Em</h4>
-									<!--<span class="more-button"><i class="icon-options"></i></span>-->
-								</div>
-								<div class="thumb">
-									<img src="images/rainonem.jpeg" alt="Portfolio-title"
-										style="width:500px;height:350px;">
-									<div class="mask"></div>
-								</div>
-							</div>
-						</a>
-						<div id="small-dialog2" class="white-popup zoom-anim-dialog mfp-hide">
-							<img src="images/rainonem.jpeg" alt="Title">
-							<h2>Rain On'Em</h2>
-							<p>Take control of an UAV, find your target, draw your aim and let the missiles do their
-								work. You need to draw over the requested enemy types to win!</p>
-							<a href="https://play.google.com/store/apps/details?id=com.revolave.rainonem"
-								target="_blank" class="btn btn-default">View on Google Play</a>
-							<!--<a href="#" class="btn btn-default">View on App Store</a>-->
-						</div>
-					</div>
-
-				</div>
-
-				<!-- more button -->
-				<div class="load-more text-center mt-4">
-					<a href="javascript:" class="btn btn-default"><i class="fas fa-spinner"></i> Load more</a>
-					<!-- numbered pagination (hidden for infinite scroll) -->
-					<ul class="portfolio-pagination list-inline d-none">
-						<li class="list-inline-item">1</li>
-						<li class="list-inline-item"><a href="works-2.html">2</a></li>
-					</ul>
-				</div>
-
-			</div>
-
-		</section>
-
 		<!-- section contact -->
 		<section id="contact">
 
@@ -450,16 +210,9 @@
 				<!-- section title -->
 				<h2 class="section-title wow fadeInUp" style="color:black">Get In Touch</h2>
 
-				<div class="spacer" data-height="60"></div>
+				<div class="spacer" data-height="50"></div>
 
 				<div class="row">
-
-					<div class="col-md-4">
-						<!-- contact info -->
-						<div class="contact-info">
-							<h3 class="wow fadeInUp" style="color:black">Let's talk about everything!</h3>
-						</div>
-					</div>
 
 					<div class="col-md-8">
 						<!-- Contact Form -->
@@ -518,14 +271,14 @@
 
 			</div>
 
+			<div class="spacer" data-height="200"></div>
+
 		</section>
 
-		<div class="spacer" data-height="60"></div>
+		<footer class="footer dark fixed-bottom">
+			
+				<span class="copyright">© Tolga Cebeci</span>
 
-		<footer class="footer dark">
-			<div class="container">
-				<span class="copyright">© Revolave Studios</span>
-			</div>
 		</footer>
 
 	</main>
