--- a/privacy.html
+++ b/privacy.html
@@ -61,15 +61,15 @@
 </div>
 
 <!-- desktop header -->
-<header class="desktop-header-3 light fixed-top">
+<header class="desktop-header-3 dark fixed-top">
 
     <div class="container">
 	
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="https://www.revolave.net"><img src="fonts/logo-dark.svg" alt="Revolave" style="width:167px;height:40px;"></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="https://www.revolave.net"><img src="fonts/logo-light.svg" alt="Revolave" style="width:250px;height:60px;"></a> <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto scrollspy">
-                    <li class="nav-item"><a class="nav-link" href="https://www.revolave.net">Home</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                 </ul>
             </div>
         </nav>
@@ -87,7 +87,7 @@
 		<div class="container">
 			
 			<!-- section title -->
-			<div class="spacer" data-height="60"></div>
+			<div class="spacer" data-height="20"></div>
 
 			<div class="mt-5">
 				<p><h2 class="section-title wow fadeInUp">Privacy Policy</h2></p></br>
@@ -236,13 +236,13 @@
 	</section>
 	
 	
-    <div class="spacer" data-height="100"></div>
+    <div class="spacer" data-height="150"></div>
     
-    <footer class="footer light">
-        <div class="container">
-            <span class="copyright">© Revolave Studios</span>
-        </div>
-    </footer>
+	<footer class="footer dark fixed-bottom">
+			
+			<span class="copyright">© Tolga Cebeci</span>
+
+	</footer>
 	
 </main>
 
