--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		</section>
 
 		<!-- section contact -->
-		<section id="contact">
+		<section id="contact" class="contact">
 
 			<div class="container">
 
@@ -271,8 +271,6 @@
 
 			</div>
 
-			<div class="spacer" data-height="200"></div>
-
 		</section>
 
 		<footer class="footer dark fixed-bottom">
@@ -282,9 +280,6 @@
 		</footer>
 
 	</main>
-
-	<!-- Go to top button -->
-	<a href="javascript:" id="return-to-top"><i class="fas fa-arrow-up"></i></a>
 
 	<!-- SCRIPTS -->
 	<script src="js/jquery-1.12.3.min.js"></script>
