--- a/privacy.html
+++ b/privacy.html
@@ -82,13 +82,10 @@
 <main class="content-3">
 	
 	<!-- section services -->
-	<section id="services">
+	<section id="services" class="privacy">
 
 		<div class="container">
 			
-			<!-- section title -->
-			<div class="spacer" data-height="20"></div>
-
 			<div class="mt-5">
 				<p><h2 class="section-title wow fadeInUp">Privacy Policy</h2></p></br>
 				<p>
@@ -231,13 +228,8 @@
 
 		</div>
 
-		<div class="spacer" data-height="50"></div>
-		
 	</section>
 	
-	
-    <div class="spacer" data-height="150"></div>
-    
 	<footer class="footer dark fixed-bottom">
 			
 			<span class="copyright">© Tolga Cebeci</span>
