Updated home screen

--- a/privacy.html
+++ b/privacy.html
@@ -84,10 +84,10 @@
 	</header>
 
 	<!-- main layout -->
-	<main class="content-3">
+	<main class="content">
 
 		<!-- section services -->
-		<section id="services" class="privacy">
+		<section class="privacy">
 
 			<div class="container">
 
