--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div></div>
 				<div></div>
 			</div>
-	
+
 			<!-- Safari and others -->
 			<div class="infinity">
 				<div>
@@ -49,16 +49,15 @@
 			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="goo-outer">
 				<defs>
 					<filter id="goo">
-						<fegaussianblur in="SourceGraphic" stdDeviation="6" result="blur"/>
-						<fecolormatrix in="blur" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo"/>
-						<feblend in="SourceGraphic" in2="goo"/>
+						<fegaussianblur in="SourceGraphic" stdDeviation="6" result="blur" />
+						<fecolormatrix in="blur" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+						<feblend in="SourceGraphic" in2="goo" />
 					</filter>
 				</defs>
 			</svg>
 		</div>
 	</div>
-	
-	<!-- desktop header -->
+
 	<header class="desktop-header-3 dark fixed-top">
 
 		<div class="container">
@@ -82,8 +81,7 @@
 
 	</header>
 
-	<!-- main layout -->
-	<main class="content-3">
+	<main class="content">
 
 		<!-- section home -->
 		<section id="home" class="home dark d-flex align-items-center">
@@ -92,7 +90,7 @@
 				<!-- info -->
 
 				<div class="icon-container">
-					<div class="icon-slider">
+					<ul class="icon-slider">
 						<a href="https://play.google.com/store/apps/details?id=com.revolave.rainonem"
 							class="icon-button" target="_blank">
 							<img src="images/rainonem.jpeg" alt="Icon 1"></a>
@@ -103,7 +101,7 @@
 							class="icon-button" target="_blank">
 							<img src="images/rotator.jpeg" alt="Icon 3"></a>
 						<!-- Add more icons as needed -->
-					</div>
+					</ul>
 				</div>
 
 				<div class="mt-4">
@@ -112,7 +110,7 @@
 				</div>
 
 				<!-- social icons -->
-				<ul class="social-icons list-inline mb-5 mt-5">
+				<ul class="social-icons list-inline mt-5">
 					<li class="list-inline-item"><a href="https://www.linkedin.com/in/tolgacebeci/" target="_blank"><i
 								class="fab fa-linkedin"></i></a></li>
 					<li class="list-inline-item"><a href="https://www.github.com/tolce/" target="_blank"><i
@@ -135,60 +133,59 @@
 
 				<div class="spacer" data-height="20"></div>
 
-					<div class="col-md-8">
-						<!-- Contact Form -->
-						<form id="contact-form" class="contact-form mt-6" action="https://formspree.io/f/xoqbjdpz"
-							method="POST">
+				<div class="col-md-8">
+					<!-- Contact Form -->
+					<form id="contact-form" class="contact-form mt-6" action="https://formspree.io/f/xoqbjdpz"
+						method="POST">
 
-							<div class="messages"></div>
+						<div class="messages"></div>
 
-							<div class="row">
-								<div class="column col-md-6">
-									<!-- Name input -->
-									<div class="form-group">
-										<input type="text" class="form-control" name="InputName" id="InputName"
-											placeholder="Your name" required="required" data-error="Name is required.">
-										<div class="help-block with-errors"></div>
-									</div>
-								</div>
-
-								<div class="column col-md-6">
-									<!-- Email input -->
-									<div class="form-group">
-										<input type="email" class="form-control" id="InputEmail" name="InputEmail"
-											placeholder="Email address" required="required"
-											data-error="Email is required.">
-										<div class="help-block with-errors"></div>
-									</div>
-								</div>
-
-								<div class="column col-md-12">
-									<!-- Email input -->
-									<div class="form-group">
-										<input type="text" class="form-control" id="InputSubject" name="InputSubject"
-											placeholder="Subject" required="required" data-error="Subject is required.">
-										<div class="help-block with-errors"></div>
-									</div>
-								</div>
-
-								<div class="column col-md-12">
-									<!-- Message textarea -->
-									<div class="form-group">
-										<textarea name="InputMessage" id="InputMessage" class="form-control" rows="5"
-											placeholder="Message" required="required"
-											data-error="Message is required."></textarea>
-										<div class="help-block with-errors"></div>
-									</div>
+						<div class="row">
+							<div class="column col-md-6">
+								<!-- Name input -->
+								<div class="form-group">
+									<input type="text" class="form-control" name="InputName" id="InputName"
+										placeholder="Your name" required="required" data-error="Name is required.">
+									<div class="help-block with-errors"></div>
 								</div>
 							</div>
 
-							<button type="submit" class="btn btn-default">Send Message</button><!-- Send Button -->
+							<div class="column col-md-6">
+								<!-- Email input -->
+								<div class="form-group">
+									<input type="email" class="form-control" id="InputEmail" name="InputEmail"
+										placeholder="Email address" required="required" data-error="Email is required.">
+									<div class="help-block with-errors"></div>
+								</div>
+							</div>
 
-						</form>
+							<div class="column col-md-12">
+								<!-- Email input -->
+								<div class="form-group">
+									<input type="text" class="form-control" id="InputSubject" name="InputSubject"
+										placeholder="Subject" required="required" data-error="Subject is required.">
+									<div class="help-block with-errors"></div>
+								</div>
+							</div>
 
-					</div>
+							<div class="column col-md-12">
+								<!-- Message textarea -->
+								<div class="form-group">
+									<textarea name="InputMessage" id="InputMessage" class="form-control" rows="5"
+										placeholder="Message" required="required"
+										data-error="Message is required."></textarea>
+									<div class="help-block with-errors"></div>
+								</div>
+							</div>
+						</div>
 
-					<div class="spacer" data-height="100"></div>
+						<button type="submit" class="btn btn-default">Send Message</button><!-- Send Button -->
+
+					</form>
+
+				</div>
+
+				<div class="spacer" data-height="100"></div>
 
 			</div>
 
