--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					</ul>
 				</div>
 
-				<div class="mt-4">
+				<div class="mt-5">
 					<a href="https://play.google.com/store/apps/dev?id=7603877924688081724" class="btn btn-default"
 						target="_blank">ALL GAMES</a>
 				</div>
@@ -129,13 +129,11 @@
 			<div class="container">
 
 				<!-- section title -->
-				<h2 class="section-title wow fadeInUp" style="color:white">Get In Touch</h2>
+				<h2 class="section-contact-title fadeInUp" style="color:white">Get In Touch</h2>
 
-				<div class="spacer" data-height="20"></div>
-
-				<div class="col-md-8">
+				<div class="col-md-12">
 					<!-- Contact Form -->
-					<form id="contact-form" class="contact-form mt-6" action="https://formspree.io/f/xoqbjdpz"
+					<form id="contact-form" class="contact-form mt-5" action="https://formspree.io/f/xoqbjdpz"
 						method="POST">
 
 						<div class="messages"></div>
@@ -171,7 +169,7 @@
 							<div class="column col-md-12">
 								<!-- Message textarea -->
 								<div class="form-group">
-									<textarea name="InputMessage" id="InputMessage" class="form-control" rows="5"
+									<textarea name="InputMessage" id="InputMessage" class="form-control" rows="8"
 										placeholder="Message" required="required"
 										data-error="Message is required."></textarea>
 									<div class="help-block with-errors"></div>
