--- a/privacy.html
+++ b/privacy.html
@@ -93,10 +93,10 @@
 
 				<div class="mt-5">
 					<p>
-					<h2 class="section-title wow fadeInUp">Privacy Policy</h2>
+					<h2 class="section-privacy-title fadeInUp">Privacy Policy</h2>
 					</p></br>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						Revolave Studios built this app as a Free app. This SERVICE is provided by Revolave
 						Studios at no cost and is intended for use as is. This page is used to inform
 						visitors regarding our policies with the collection, use, and disclosure of
@@ -112,10 +112,10 @@
 					</p>
 					</br>
 					<p>
-					<h2 class="section-title wow fadeInUp">Information Collection and Use</h2>
+					<h2 class="section-privacy-title fadeInUp">Information Collection and Use</h2>
 					</p></br>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						For a better experience, while using our Service, we may require you to
 						provide us with certain personally identifiable information, including but
 						not limited to personally identifiable information, score, username. The
@@ -126,7 +126,7 @@
 					</h2>
 					</p>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						<ul>
 							<li>
 								<a href="https://www.google.com/policies/privacy/" target="_blank">Google Play
@@ -163,10 +163,10 @@
 					</p>
 					</br>
 					<p>
-					<h2 class="section-title wow fadeInUp">Log Data</h2>
+					<h2 class="section-privacy-title fadeInUp">Log Data</h2>
 					</p></br>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						We want to inform you that whenever you use our Service, in a case of an
 						error in the app we collect data and information (through third party
 						products) on your phone called Log Data. This Log Data may include
@@ -178,10 +178,10 @@
 					</p>
 					</br>
 					<p>
-					<h2 class="section-title wow fadeInUp">Cookies</h2>
+					<h2 class="section-privacy-title fadeInUp">Cookies</h2>
 					</p></br>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						Cookies are files with a small amount of data that are commonly used as
 						anonymous unique identifiers. These are sent to your browser from the
 						websites that you visit and are stored on your device's internal memory.
@@ -195,10 +195,10 @@
 					</p>
 					</br>
 					<p>
-					<h2 class="section-title wow fadeInUp">Service Providers</h2>
+					<h2 class="section-privacy-title fadeInUp">Service Providers</h2>
 					</p></br>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						<p>
 							We may employ third-party companies and individuals due to the following
 							reasons:
@@ -225,10 +225,10 @@
 					</p>
 					</br>
 					<p>
-					<h2 class="section-title wow fadeInUp">Security</h2>
+					<h2 class="section-privacy-title fadeInUp">Security</h2>
 					</p></br>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						We value your trust in providing us your Personal Information, thus we are
 						striving to use commercially acceptable means of protecting it. But
 						remember that no method of transmission over the internet, or method of
@@ -238,10 +238,10 @@
 					</p>
 					</br>
 					<p>
-					<h2 class="section-title wow fadeInUp">Links to Other Sites</h2>
+					<h2 class="section-privacy-title fadeInUp">Links to Other Sites</h2>
 					</p></br>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						This Service may contain links to other sites. If you click on a
 						third-party link, you will be directed to that site. Note that these
 						external sites are not operated by us. Therefore, we strongly advise you to
@@ -252,10 +252,10 @@
 					</p>
 					</br>
 					<p>
-					<h2 class="section-title wow fadeInUp">Children’s Privacy</h2>
+					<h2 class="section-privacy-title fadeInUp">Children’s Privacy</h2>
 					</p></br>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						These Services do not address anyone under the age of 13. We do not
 						knowingly collect personally identifiable information from children under
 						13. In the case we discover that a child under 13 has provided us with
@@ -267,10 +267,10 @@
 					</p>
 					</br>
 					<p>
-					<h2 class="section-title wow fadeInUp">Changes to This Privacy Policy</h2>
+					<h2 class="section-privacy-title fadeInUp">Changes to This Privacy Policy</h2>
 					</p></br>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						We may update our Privacy Policy from time to time. Thus, you are advised
 						to review this page periodically for any changes. We will notify you of any
 						changes by posting the new Privacy Policy on this page. These changes are
@@ -279,10 +279,10 @@
 					</p>
 					</br>
 					<p>
-					<h2 class="section-title wow fadeInUp">Contact Us</h2>
+					<h2 class="section-privacy-title fadeInUp">Contact Us</h2>
 					</p></br>
 					<p>
-					<h2 class="section-text wow fadeInUp">
+					<h2 class="section-privacy-text fadeInUp">
 						If you have any questions or suggestions about our Privacy Policy, do not
 						hesitate to contact us at <strong><a
 								href="mailto:revolave.studio@gmail.com">revolave.studio@gmail.com</a></strong>
