Updated hiome screen games display

--- a/index.html
+++ b/index.html
@@ -93,14 +93,31 @@
 					<ul class="icon-slider">
 						<a href="https://play.google.com/store/apps/details?id=com.revolave.rainonem"
 							class="icon-button" target="_blank">
-							<img src="images/rainonem.jpeg" alt="Icon 1"></a>
+							<img src="images/rot.jpg" alt="Icon_1"></a>
+
 						<a href="https://play.google.com/store/apps/details?id=com.revolave.medievalhero"
 							class="icon-button" target="_blank">
-							<img src="images/medievalhero.jpeg" alt="Icon 2"></a>
+							<img src="images/mh.jpg" alt="Icon_2"></a>
+
+						<a href="https://play.google.com/store/apps/details?id=com.revolave.wegotnobrakes"
+							class="icon-button" target="_blank">
+							<img src="images/wgnb.png" alt="Icon_3"></a>
+
 						<a href="https://play.google.com/store/apps/details?id=com.revolave.rotator2048"
 							class="icon-button" target="_blank">
-							<img src="images/rotator.jpeg" alt="Icon 3"></a>
-						<!-- Add more icons as needed -->
+							<img src="images/r2048.png" alt="Icon_4"></a>
+
+						<a href="https://play.google.com/store/apps/details?id=com.ticstudio.gaplessthrow"
+							class="icon-button" target="_blank">
+							<img src="images/gt.jpg" alt="Icon_5"></a>
+
+						<a href="https://play.google.com/store/apps/details?id=com.revolave.tap2048"
+							class="icon-button" target="_blank">
+							<img src="images/t2048.png" alt="Icon_6"></a>
+
+						<a href="https://play.google.com/store/apps/details?id=com.revolave.blockescape"
+							class="icon-button" target="_blank">
+							<img src="images/be2048.png" alt="Icon_7"></a>
 					</ul>
 				</div>
 
@@ -129,9 +146,9 @@
 			<div class="container">
 
 				<!-- section title -->
-				<h2 class="section-contact-title fadeInUp" style="color:white">Get In Touch</h2>
+				<h2 class="section-contact-title wow fadeInUp" style="color:white">Get In Touch</h2>
 
-				<div class="col-md-12">
+				<div class="col-md-12 wow fadeInUp">
 					<!-- Contact Form -->
 					<form id="contact-form" class="contact-form mt-5" action="https://formspree.io/f/xoqbjdpz"
 						method="POST">
@@ -191,7 +208,7 @@
 
 		<footer class="footer dark fixed-bottom">
 
-			<span class="copyright">© Tolga Cebeci</span>
+			<span class="copyright">Tolga Cebeci</span>
 
 		</footer>
 
