Added google play link on home screen

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
 				<div class="icon-container">
 					<ul class="icon-slider">
+
 						<a href="https://play.google.com/store/apps/details?id=com.revolave.rainonem"
 							class="icon-button" target="_blank">
 							<img src="images/rot.jpg" alt="Icon_1"></a>
@@ -118,20 +119,22 @@
 						<a href="https://play.google.com/store/apps/details?id=com.revolave.blockescape"
 							class="icon-button" target="_blank">
 							<img src="images/be2048.png" alt="Icon_7"></a>
-					</ul>
-				</div>
 
-				<div class="mt-5">
-					<a href="https://play.google.com/store/apps/dev?id=7603877924688081724" class="btn btn-default"
-						target="_blank">ALL GAMES</a>
+					</ul>
 				</div>
 
 				<!-- social icons -->
 				<ul class="social-icons list-inline mt-5">
+
+					<li class="list-inline-item"><a href="https://play.google.com/store/apps/dev?id=7603877924688081724" target="_blank"><i
+						class="fab fa-google-play"></i></a></li>
+
 					<li class="list-inline-item"><a href="https://www.linkedin.com/in/tolgacebeci/" target="_blank"><i
 								class="fab fa-linkedin"></i></a></li>
+
 					<li class="list-inline-item"><a href="https://www.github.com/tolce/" target="_blank"><i
-								class="fab fa-github"></i></a></li>
+								class="fab fa-github-square"></i></a></li>
+								
 				</ul>
 				<!-- buttons -->
 			</div>
