Fixed social icons hover color

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 							class="icon-button" target="_blank">
 							<img src="images/gt.jpg" alt="Icon_5"></a>
 
-						<a href="https://play.google.com/store/apps/details?id=com.revolave.tap2048"
-							class="icon-button" target="_blank">
+						<a href="https://play.google.com/store/apps/details?id=com.revolave.tap2048" class="icon-button"
+							target="_blank">
 							<img src="images/t2048.png" alt="Icon_6"></a>
 
 						<a href="https://play.google.com/store/apps/details?id=com.revolave.blockescape"
@@ -126,15 +126,15 @@
 				<!-- social icons -->
 				<ul class="social-icons list-inline mt-5">
 
-					<li class="list-inline-item"><a href="https://play.google.com/store/apps/dev?id=7603877924688081724" target="_blank"><i
-						class="fab fa-google-play"></i></a></li>
+					<li class="list-inline-item"><a href="https://play.google.com/store/apps/dev?id=7603877924688081724"
+						target="_blank"><i class="fab fa-google-play"></i></a></li>
 
 					<li class="list-inline-item"><a href="https://www.linkedin.com/in/tolgacebeci/" target="_blank"><i
 								class="fab fa-linkedin"></i></a></li>
 
 					<li class="list-inline-item"><a href="https://www.github.com/tolce/" target="_blank"><i
 								class="fab fa-github-square"></i></a></li>
-								
+
 				</ul>
 				<!-- buttons -->
 			</div>
