Added resume link

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<ul class="social-icons list-inline mt-5">
 
 					<li class="list-inline-item"><a href="https://play.google.com/store/apps/dev?id=7603877924688081724"
-						target="_blank"><i class="fab fa-google-play"></i></a></li>
+							target="_blank"><i class="fab fa-google-play"></i></a></li>
 
 					<li class="list-inline-item"><a href="https://www.linkedin.com/in/tolgacebeci/" target="_blank"><i
 								class="fab fa-linkedin"></i></a></li>
@@ -136,8 +136,17 @@
 								class="fab fa-github-square"></i></a></li>
 
 				</ul>
-				<!-- buttons -->
-			</div>
+
+				<div class="container mt-5">
+
+					<div class="col-md-12 wow fadeInUp">
+
+						<a class="section-resume-text"
+							href="https://drive.google.com/file/d/103iZ5bI7-aw82KUjBOskTznQKN16pu8s/view?usp=drive_link"
+							target="_blank">Check out my resume!</a>
+
+					</div>
+				</div>
 
 			</div>
 
